# alpha1

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  unitypath.txt  xmake.lua
example_mod/src/: main.cpp
include/: hooks.hpp  il2cpp_types.hpp  loader.hpp  loading.hpp  main.hpp  modloader_internal.hpp
proxy/include/: loader.hpp  winhttp.hpp
proxy/src/: dllmain.cpp  loader.cpp  winhttp.cpp
shared/: files.hpp  hooking.hpp  il2cpp.hpp  il2cpp_pointer_types.hpp  il2cpp_utils.hpp  logger.hpp  modloader.hpp  utils.hpp
src/: files.cpp  hooking.cpp  hooks.cpp  il2cpp.cpp  il2cpp_pointers.cpp  il2cpp_utils.cpp  loading.cpp  logger.cpp  main.cpp  modloader.cpp  utils.cpp
